[COLOR="DeepSkyBlue"]4.5.1 (133)[/COLOR]
[LIST]
[*] Using luacheck to clean up code.
[/LIST]

[COLOR="DeepSkyBlue"]4.5.0 (132)[/COLOR]
[LIST]
[*] Fixed the Add Category section's select category dropdown so that it has values after you choose a new tag.
[/LIST]

[COLOR="DeepSkyBlue"]4.4.9 (131)[/COLOR]
[LIST]
[*] Added "container_stackable" to the possible search of [COLOR="MediumSeaGreen"]sptype()[/COLOR]. This will  match for the "Unknown Master Writs" and the "Unidentified Supply Survey" containers. See the "Maps & Surveys" and (new) "Master Writs (All)" predefined category rules for examples of how to use this.
[*] Modified the predefined rule for "Maps & Surveys" to also include the "Unidentified Servey Reports"
[*] Created a new predefined category rule called "Master Writs (All)" which will show the old master writs along with the new unknown master writs.
[/LIST]

[COLOR="DeepSkyBlue"]4.4.8 (130)[/COLOR]:
[LIST]
[*] Converting to LibSFUtils logger wrapper to control if debug-level messages get sent to the LibDebugLogger.
[/LIST]

[COLOR="DeepSkyBlue"]4.4.7 (129)[/COLOR]:
[LIST]
[*] Update to a new version of LibMMediaProvider which changed its name and thereby broke everything that used it prior to this. Now requires the updated LibMediaProvider version 1.1.
[/LIST]

[COLOR="DeepSkyBlue"]4.4.6 (128)[/COLOR]:
[LIST]
[*] Removed debug messages that were likely causing lag.
[/LIST]

[COLOR="DeepSkyBlue"]4.4.5 (127)[/COLOR]:
[LIST]
[*] A new function [COLOR="MediumSeaGreen"]autofurniturecat()[/COLOR] specifically for use with the Furniture Vault.
[*] A new predefined rule tag="Furniture", name="ByCategory" added which uses the new autofurniturecat() to divide up the contents of your Furniture Vault by the categories (conservatory, gallery, undercroft, etc.) of the furniture that you have in it. All you need to do is to add the rule to your Furniture Vault bag with the appropriate priorities that you want.